force-app/main/default/objects/ssot__LoanAccount__dlm/fields/ssot__ExpectedCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpectedCloseDate__c</fullName>
    <label>Expected Close Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpectedCloseDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>