force-app/main/default/objects/ssot__LoanAccount__dlm/fields/ssot__FinancialAccountID__c.field-meta.xml
<CustomField>
    <fullName>ssot__FinancialAccountID__c</fullName>
    <label>Financial Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FinancialAccountID</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>