force-app/main/default/objects/ssot__LoanAccount__dlm/fields/ssot__LoanAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoanAmount__c</fullName>
    <label>Loan Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoanAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>