force-app/main/default/objects/ssot__LoanAccount__dlm/fields/ssot__LoanEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoanEndDate__c</fullName>
    <label>Loan End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoanEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>