force-app/main/default/objects/ssot__LoanAccount__dlm/fields/ssot__LoanTermMonthsNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoanTermMonthsNumber__c</fullName>
    <label>Loan Term Months</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoanTermMonthsNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>